--- a/README
+++ b/README
@@ -6,3 +6,6 @@ Then run compiled app
 
 ### Potential drawbacks
 Cat names and target names have to be unique
+
+
+I wasn't able to cover all the code with text and comments, because I was running late
